[tool.poetry]
name = "stepup"
version = "0.1.0"
description = "Implement step up auth in your application"
authors = ["wezham <wezham1@gmail.com>"]
include = ["stepup"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
okta = "^2.9.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
